--- a/wasm/demo/demo.html
+++ b/wasm/demo/demo.html
@@ -1,10 +1,21 @@
 <html>
 <head>
-<script src="main.js" type="module">
-</script>
+<title>LevelDB WASM Demo</title>
+<script src="main.js" type="module"></script>
 </head>
-
 <body>
-Demo app!
+<p>
+    <span style="font-weight: bold;">Get:</span><br>
+    <label for="get_key">Key: </label><input id="get_key" type="text"><br>
+    <input id="get" type="button" value="Get"><br>
+    <span style="font-style: italic;">Result: </span><span id="get_result"></span>
+</p>
+<p>
+    <span style="font-weight: bold;">Put:</span><br>
+    <label for="put_key">Key: </label><input id="put_key" type="text"><br>
+    <label for="put_value">Value: </label><input id="put_value" type="text"><br>
+    <input id="put" type="button" value="Put"><br>
+    <span style="font-style: italic;">Result: </span><span id="put_result"></span>
+</p>
 </body>
 </html>
