--- a/wasm/demo/demo.html
+++ b/wasm/demo/demo.html
@@ -20,6 +20,10 @@
     <button type="button" id="clear_button">Clear</button><br>
 </p>
 <p>
+    <span style="font-weight: bold;">Generate test data</span><br>
+    <input type="button" id="generate_data" value="Generate">
+</p>
+<p>
     <span style="font-weight: bold;">Get:</span><br>
     <label for="get_key">Key: </label><input id="get_key" type="text"><br>
     <input id="get" type="button" value="Get"><br>
