Improve benchmarks and add delete benches

--- a/wasm/benchmark/benchmark.html
+++ b/wasm/benchmark/benchmark.html
@@ -32,6 +32,10 @@
     <label for="readMissing">read missing values</label><br>
     <input type="checkbox" id="readHot" name="readHot">
     <label for="readHot">read hot (the same values a lot)</label><br>
+    <input type="checkbox" id="deleteRandom" name="deleteRandom">
+    <label for="deleteRandom">delete in random order</label><br>
+    <input type="checkbox" id="deleteSequential" name="deleteSequential">
+    <label for="deleteSequential">delete in order</label><br>
 </fieldset>
 <fieldset>
     <legend>Parameters:</legend>
