Add clear button to benchmark

--- a/wasm/benchmark/benchmark.html
+++ b/wasm/benchmark/benchmark.html
@@ -8,6 +8,7 @@
 <h1>Key value benchmark</h1>
 <div id="controls">
 <button id="run-button">Run</button>
+<div>
 <fieldset>
     <legend>Select a backend:</legend>
 
@@ -23,6 +24,8 @@
       <a href="https://github.com/a-sully/leveldb">Learn more</a>
     </div>
 </fieldset>
+<button id="clear-button">Reset db</button>
+</div>
 <fieldset>
     <legend>Select benchmarks:</legend>
 
